--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "celebrate": "^12.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.4",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.4",
     "@types/multer": "^1.4.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
